<resources>
    <string name="app_name">Xsq</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_second">SecondActivity</string>

    <string name="base_shouye">首页</string>
    <string name="base_shangcheng">商城</string>
    <string name="base_xuanche">选车</string>
    <string name="base_fuwu">服务</string>
    <string name="base_wode">我的</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="chang_longinMath">短信验证码登录</string>
    <string name="login_qsrsjh">请输入手机号</string>
    <string name="login_qsryzm">请输入验证码</string>
    <string name="login_hqyzm">获取验证码</string>
    <string name="login_zhmmdl">账号密码登录</string>
    <string name="xyb">下一步</string>
    <string name="login">登录</string>
    <string name="passwordAgain_wancheng">完成</string>
    <string name="shezhi">设置</string>
    <string name="weidenglong">未登录</string>
    <string name="huiyuandengji">普通会员</string>
    <string name="wodedingdan">我的订单</string>
    <string name="chakanquanbu">查看全部</string>

    <string name="quanbu">全部</string>
    <string name="daizhifu">待支付</string>
    <string name="daipingjia">待评价</string>
    <string name="fuwuzhong">服务中</string>
    <string name="tuikuan">已退款</string>
    <string name="fenxianggeihaoyou">分享给好友</string>
    <string name="tuijianma">推荐码：xysjgkl</string>

    <string name="reping">热评</string>
    <string name="renqi">人气</string>
    <string name="remenzhuda">热门主打</string>
    <string name="xingnengwangzhe">性能王者</string>
    <string name="jipushuangT">吉普双T</string>
    <string name="ranqishagnshi">燃擎上市</string>
    <string name="jiage">1.88万起</string>
    <string name="tuijiangouche">推荐购车</string>

    <string name="xingming">姓名</string>
    <string name="qingshuruxingming">请输入姓名</string>
    <string name="shoujihao">手机号</string>
    <string name="qingshurushoujihao">请输入手机号</string>
    <string name="yixiangchexing">意向车型</string>
    <string name="xuantian">选填</string>
    <string name="goucheyusuan">购车预算</string>
    <string name="goucheriqi">购车日期</string>
    <string name="wan">万</string>
    <string name="goucheyongtu">购车用途</string>
    <string name="shangbandaibu">上班代步</string>
    <string name="shangwuyongtu">商务用途</string>
    <string name="lvxingdoufeng">旅行兜风</string>
    <string name="zaikeyunying">载客运营</string>
    <string name="fukuanfangshi">付款方式</string>
    <string name="quankuan">全款</string>
    <string name="daikuan">贷款</string>
    <string name="tijiao">提交</string>

    <string name="xincheshijia">新车试驾</string>
    <string name="daolujiuyuan">道路救援</string>
    <string name="yuyuexiche">预约洗车</string>
    <string name="dijiachexian">低价车险</string>

    <string name="qianbao">钱包</string>
    <string name="hongbao">红包</string>
    <string name="jinbi">金币</string>
    <string name="zeroMoney">0.00</string>
    <string name="xiugaidenglumima">修改登录密码</string>
    <string name="xiugaizhifumima">修改支付密码</string>
    <string name="weixin">微信</string>
    <string name="QQhao">QQ</string>
    <string name="youxiangdizhi">邮箱地址</string>
    <string name="tuisongxiaoxi">推送消息</string>
    <string name="banbenjiance">版本检测</string>
    <string name="guanyuwomen">关于我们</string>
    <string name="tuichudenglu">退出登录</string>
    <string name="gerenxinxi">个人信息</string>
    <string name="gexingqianming">个性签名</string>
    <string name="zhengshixingming">真实姓名</string>
    <string name="xingbie">性别</string>
    <string name="nicheng">昵称</string>
    <string name="touxiang">头像</string>
    <string name="shouhuodizhi">收货地址</string>
    <string name="dangqianbangdingdedisanfang">当前绑定的第三方</string>
    <string name="tuijianren">推荐人</string>
    <string name="sosuo">搜索</string>
    <string name="youhuijiangjia">优惠降价</string>
    <string name="koubeipaihang">口碑排行</string>
    <string name="xiaoliangpaihang">销量排行</string>
    <string name="xincheshangshi">新车上市</string>
    <string name="rementuijian">热门推荐</string>
    <string name="remenpinpai">热门品牌</string>

    <string name="goucheshijian">购车时间</string>
    <string name="wodeaiche">我的爱车</string>
    <string name="tianjiawodeaiche">添加我的爱车</string>
    <string name="wodecheku">我的车库</string>

    <string name="zailaiyidan">再来一单</string>
    <string name="fadongjihao">发动机号</string>
    <string name="chejiahao">车架号</string>
    <string name="baocun">保存</string>
    <string name="chepaihaoma">车牌号码</string>
    <string name="chexingxinxi">车型信息</string>
    <string name="tianjiacheliang">添加车辆</string>
    <string name="addcarmessage">我们将对您的信息严格保密，请放心填写。</string>
    <string name="qingshuruchepaihao">请输入车牌号</string>
    <string name="qingshuruchejiahao">请输入车架号</string>
    <string name="qingshurufadongjiahao">请输入发动机号</string>

    <string name="dingdanbianhaoY">订单编号：</string>
    <string name="xiadanshijianY">下单时间：</string>
    <string name="fukuanfangshiY">付款方式：</string>
    <string name="zhudachexing">主打车型</string>
    <string name="fuwu">服务</string>
    <string name="chezhufuwu">车主服务</string>
    <string name="gengduo">更多</string>

    <string name="jifengrenwu">积分任务</string>
    <string name="jifenshangcheng">积分商城</string>
    <string name="remenhuodong">热门活动</string>
    <string name="wodekabao">我的卡包</string>
    <string name="yaoqingyouli">邀请有礼</string>
    <string name="denglumima">登录密码</string>
    <string name="qingquerenxinmima">请确认新密码</string>
    <string name="qingshuruxinmima">请输入新密码</string>
    <string name="qingshuruyuanmima">请输入原密码</string>
    <string name="huoquyanzhengma">获取验证码</string>

    <string name="yuanmimaxiugai">原密码修改</string>
    <string name="shoujiyanzhengmaxiugai">手机验证码修改</string>
    <string name="zhifumima">支付密码</string>
    <string name="qingshurunicheng">请输入昵称</string>
    <string name="xiugaishoujihao">修改手机号</string>
  
    <!--用户信息-->
    <string name="user_info_modify_header_img_success">修改头像成功</string>
    <string name="user_info_modify_header_img_fail">修改头像失败</string>
    <string name="user_info_modify_header_img_camera_open_fail">抱歉，无法打开相机。</string>
    <string name="user_info_modify_header_img_crop_fail">抱歉，无法裁剪照片。</string>
    <string name="user_info_modify_header_img_get_fail">抱歉，未能获取照片。</string>
</resources>
