<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.xsq.My.MyCarAddCarActivity"
    android:background="@color/beijingse">

    <!--  添加车辆 顶部 -->
    <RelativeLayout
        android:id="@+id/AddCar_topR"
        style="@style/base_title_white">
        <ImageView
            android:id="@+id/AddCar_topBackI"
            style="@style/base_title_image"/>
        <TextView
            style="@style/base_title_text_red"
            android:text="@string/tianjiacheliang"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/AddCar_modelR"
        style="@style/base_setUp_RelativeLayout"
        android:layout_below="@id/AddCar_topR"
        android:layout_marginTop="1dp">
        <TextView
            style="@style/setUp_text"
            android:text="@string/chexingxinxi"/>
        <ImageView
            android:id="@+id/AddCar_modelI"
            style="@style/intoNextPage_arrow_gray_small2"/>

        <TextView
            style="@style/setUp_text"
            android:layout_toLeftOf="@id/AddCar_modelI"
            android:layout_marginRight="20dp"
            android:text="@string/chexingxinxi"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/AddCar_mainR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/AddCar_modelR"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:id="@+id/AddCar_numberR"
            style="@style/base_setUp_RelativeLayout">
            <TextView
                style="@style/setUp_text"
                android:text="@string/chepaihaoma"/>

            <EditText
                style="@style/setUp_text"
                android:layout_marginRight="20dp"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:hint="@string/qingshuruchepaihao"/>
            <View
                style="@style/setUp_henxianV"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/AddCar_buyTimeR"
            style="@style/base_setUp_RelativeLayout"
            android:layout_below="@id/AddCar_numberR">
            <TextView
                style="@style/setUp_text"
                android:text="@string/goucheshijian"/>
            <ImageView
                android:id="@+id/AddCar_buyTimeI"
                style="@style/intoNextPage_arrow_gray_small2"/>

            <TextView
                style="@style/setUp_text"
                android:layout_toLeftOf="@id/AddCar_buyTimeI"
                android:layout_marginRight="20dp"
                android:text="2017-09-20"/>
            <View
                style="@style/setUp_henxianV"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/AddCar_fdjR"
            style="@style/base_setUp_RelativeLayout"
            android:layout_below="@id/AddCar_buyTimeR">
            <TextView
                style="@style/setUp_text"
                android:text="@string/fadongjihao"/>

            <EditText
                style="@style/setUp_text"
                android:layout_marginRight="20dp"
                android:hint="@string/qingshurufadongjiahao"
                android:layout_alignParentRight="true"
                android:background="@null"/>
            <View
                style="@style/setUp_henxianV"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/AddCar_cjR"
            style="@style/base_setUp_RelativeLayout"
            android:layout_below="@id/AddCar_fdjR">
            <TextView
                style="@style/setUp_text"
                android:text="@string/chejiahao"/>

            <EditText
                style="@style/setUp_text"
                android:layout_marginRight="20dp"
                android:hint="@string/qingshuruchejiahao"
                android:layout_alignParentRight="true"
                android:background="@null"/>
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/AddCar_messageT"
        android:layout_below="@id/AddCar_mainR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/addcarmessage"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/text_12"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@id/AddCar_messageT"
        android:layout_marginTop="30dp"
        android:text="@string/baocun"
        android:textColor="@color/colorWhite"
        android:background="@color/colorBlue"/>
</RelativeLayout>
