<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.xsq.My.MyChangeLoginPasswordActivity"
    android:orientation="vertical"
    android:background="#f2f2f2">
    <!--  修改登录密码页面 顶部 -->
    <RelativeLayout
        android:id="@+id/ChangeLoginPas_topR"
        style="@style/base_title_white">
        <ImageView
            android:id="@+id/ChangeLoginPas_topI"
            style="@style/base_title_image"/>
        <TextView
            style="@style/base_title_text_red"
            android:text="@string/denglumima"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/ChangeLoginPas_ChangeByPas"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/mxml_left_fill_hot"
            android:text="@string/yuanmimaxiugai"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/ChangeLoginPas_ChangeByPhone"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/mxml_right_fill_white"
            android:text="@string/shoujiyanzhengmaxiugai"
            android:textColor="@color/textblack"
            android:textSize="14sp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/ChangeLoginPas_PhoneE"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/mxml_left_bottom_thred"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"/>

    <LinearLayout
        android:id="@+id/ChangeLoginPas_PhoneCodeL"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp">

        <EditText
            android:id="@+id/ChangeLoginPas_PhoneCodeE"
            style="@style/base_changeInfogetCode_EditText"
            android:layout_weight="1"
            android:hint="@string/login_qsryzm"/>

        <Button
            android:id="@+id/ChangeLoginPas_GetPhoneCodeT"
            android:layout_width="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_height="40dp"
            android:text="@string/huoquyanzhengma"
            android:background="@color/colorWhite"
            android:gravity="center"
           android:layout_gravity="center"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/text_14"/>

    </LinearLayout>

    <EditText
        android:id="@+id/ChangeLoginPas_BeforPasE"
        style="@style/base_changeInfo_EditText"
        android:hint="@string/qingshuruyuanmima"/>
    <EditText
        android:id="@+id/ChangeLoginPas_NewPasE"
        style="@style/base_changeInfo_EditText"
        android:hint="@string/qingshuruxinmima"/>
    <EditText
        android:id="@+id/ChangeLoginPas_NewAginPasE"
        style="@style/base_changeInfo_EditText"
        android:hint="@string/qingquerenxinmima"/>

    <Button
        android:id="@+id/ChangeLoginPas_SubmitT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/tijiao"
        android:background="@drawable/mxml_radius_hot"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"/>
</LinearLayout>
