<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.suifeng.xsq.xsq.Me.OrderListActivity"
    android:background="@color/beijingse">

    <!--  订单列表页面 顶部 -->
    <RelativeLayout
        android:id="@+id/OrderList_topR"
        style="@style/base_title_white">
        <ImageView
            android:id="@+id/OrderList_topI"
            style="@style/base_title_image"/>
        <TextView
            style="@style/base_title_text_red"
            android:text="@string/wodedingdan"/>
    </RelativeLayout>
   <LinearLayout
       android:id="@+id/orderList_navL"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:background="@color/colorWhite"
       android:layout_below="@+id/OrderList_topR"
       android:layout_marginTop="1dp"
       >
       <TextView
           android:id="@+id/OrderList_allOrderT"
           style="@style/orderList_top_text_noselect"
           android:text="@string/quanbu"
           />
       <TextView
           android:id="@+id/OrderList_toPayT"
           style="@style/orderList_top_text_noselect"
           android:text="@string/daizhifu"
           />
       <TextView
           android:id="@+id/OrderList_inServerT"
           style="@style/orderList_top_text_noselect"
           android:text="@string/fuwuzhong"
           />
       <TextView
           android:id="@+id/OrderList_toAssess"
           style="@style/orderList_top_text_noselect"
           android:text="@string/daipingjia"
           />
   </LinearLayout>
    <ScrollView
        android:layout_below="@id/orderList_navL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--内部 xml 是 order_list.xml-->
    </ScrollView>
</RelativeLayout>
